[tool.poetry]
name = "isobar_ext"
version = "0.5.2a4"
description = "A Python library to express and manipulate musical patterns extending the original isobar library."
authors = ["Piotr Sakowski <piotereks@gmail.com>"]
readme = "README.md"
repository = "https://github.com/piotereks/isobar-ext"
documentation = "http://piotereks.github.io/isobar-ext"
    keywords=['sound', 'music', 'composition']
    classifiers=[
        'Topic :: Multimedia :: Sound/Audio',
        'Topic :: Artistic Software',
        'Development Status :: 4 - Beta',
        'Intended Audience :: Developers'
    ]
license = "MIT"

include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.9"
mido = "*"
python-osc = "*"
python-rtmidi = "*"

[tool.poetry.dev-dependencies]
pytest = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

